tests/snapshots/test_uigen_widget__qstring_arg.snap
---
source: tests/test_uigen_widget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QWidget *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupLabelText();
        this->setupLabel1Text();
        this->updateLabelText();
        this->updateLabel1Text();
    }

private:
    enum class BindingIndex : unsigned {
        LabelText,
        Label1Text,
    };

    void setupLabelText()
    {
        QObject::connect(this->ui_->combo, &QComboBox::currentIndexChanged, root_, [this]() { this->updateLabelText(); });
    }

    void updateLabelText()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::LabelText);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->ui_->label->setText(this->evalLabelText());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    QString evalLabelText() const
    {
        int a0;
        QString a1;
    b0:
        a0 = this->ui_->combo->currentIndex();
        a1 = QStringLiteral("dynamic %1").arg(a0);
        return a1;
    }

    void setupLabel1Text()
    {
    }

    void updateLabel1Text()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::Label1Text);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->ui_->label1->setText(this->evalLabel1Text());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    QString evalLabel1Text() const
    {
        QString a0;
    b0:
        a0 = QStringLiteral("static %1").arg(1);
        return a0;
    }

    QWidget *const root_;
    Ui::MyType *const ui_;
#ifndef QT_NO_DEBUG
    quint32 bindingGuard_[1] = {0};
#endif

};
} // namespace UiSupport

