tests/snapshots/test_uigen_widget__unique_binding_method_name.snap
---
source: tests/test_uigen_widget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QWidget *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupMainWindowTitle();
        this->setupMainWindowTitle1();
        this->updateMainWindowTitle();
        this->updateMainWindowTitle1();
    }

private:
    enum class BindingIndex : unsigned {
        MainWindowTitle,
        MainWindowTitle1,
    };

    void setupMainWindowTitle()
    {
        QObject::connect(this->ui_->edit2, &QLineEdit::textChanged, this->root_, [this]() { this->updateMainWindowTitle(); });
    }

    void updateMainWindowTitle()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::MainWindowTitle);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->ui_->mainWindow->setTitle(this->evalMainWindowTitle());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    QString evalMainWindowTitle()
    {
        QString a0;
    b0:
        a0 = this->ui_->edit2->text();
        return a0;
    }

    void setupMainWindowTitle1()
    {
        QObject::connect(this->ui_->edit1, &QLineEdit::textChanged, this->root_, [this]() { this->updateMainWindowTitle1(); });
    }

    void updateMainWindowTitle1()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::MainWindowTitle1);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->root_->setWindowTitle(this->evalMainWindowTitle1());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    QString evalMainWindowTitle1()
    {
        QString a0;
    b0:
        a0 = this->ui_->edit1->text();
        return a0;
    }

    QWidget *const root_;
    Ui::MyType *const ui_;
#ifndef QT_NO_DEBUG
    quint32 bindingGuard_[1] = {0};
#endif

};
} // namespace UiSupport

